Building Initial Main Window

--- a/ToolBox/ToolBox/App.xaml
+++ b/ToolBox/ToolBox/App.xaml
@@ -4,6 +4,13 @@
              xmlns:local="clr-namespace:ToolBox"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Colors.xaml"/>
+                <ResourceDictionary Source="Buttons.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
