Attempt to adjust window sizing

--- a/ToolBox/ToolBox/MainWindow.xaml
+++ b/ToolBox/ToolBox/MainWindow.xaml
@@ -5,12 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ToolBox"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
+        Title="MainWindow" MinHeight="100" MinWidth="150" SizeToContent="WidthAndHeight">
+      <Grid MinWidth="520" MinHeight="320" RenderTransformOrigin="0.5,0.5">
+        <Grid.RenderTransform>
+            <TransformGroup>
+                <ScaleTransform/>
+                <SkewTransform/>
+                <RotateTransform Angle="-0.024"/>
+                <TranslateTransform/>
+            </TransformGroup>
+        </Grid.RenderTransform>
         <Grid.Background>
             <SolidColorBrush Color="{DynamicResource BackGround}"/>
         </Grid.Background>
-        <Label x:Name="label" Content="&#x9;&#x9;Quicken Loans Tool Box&#xD;&#xA;&#xD;&#xA;&#x9;Please Click Login Below To Continue:&#xD;&#xA;&#xD;&#xA;&#x9;&#x9;Authorized Users Only" Height="123" Margin="21.6,10,33,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
-        <Button x:Name="button" Content="Login" Height="46.4" Margin="10,0,10,95.4" VerticalAlignment="Bottom" Style="{DynamicResource MainWindowLoginButton}"/>
+        <Label x:Name="label" Content="&#x9;&#x9;Quicken Loans Tool Box&#xD;&#xA;&#xD;&#xA;&#x9;Please Click Login Below To Continue:&#xD;&#xA;&#xD;&#xA;&#x9;&#x9;Authorized Users Only" Height="123" Margin="33.2,0,33,187.4" VerticalAlignment="Bottom" FontWeight="Bold" FontSize="16"/>
+        <Button x:Name="button" Content="Login" Height="46.4" Margin="10,0,10,95.4" VerticalAlignment="Bottom" Style="{DynamicResource MainWindowLoginButton}" FontWeight="Bold"/>
+        <Button x:Name="button_Copy" Content="EXIT" Height="46.4" Margin="10,0,10,44" VerticalAlignment="Bottom" Style="{DynamicResource MainWindowLoginButton}" FontWeight="Bold"/>
     </Grid>
 </Window>
