--- a/ToolBox/ToolBox/App.xaml
+++ b/ToolBox/ToolBox/App.xaml
@@ -4,8 +4,26 @@
              xmlns:local="clr-namespace:ToolBox"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-
         <ResourceDictionary>
+            <LinearGradientBrush StartPoint="1,0"
+                         EndPoint="1,1"
+                         x:Key="backBrush">
+                <GradientStop Color="Black"
+                    Offset="0" />
+                <GradientStop Color="DarkBlue"
+                    Offset=".35" />
+            </LinearGradientBrush>
+            <DropShadowEffect x:Key="shadowWindow"
+                      Color="Gray"
+                      Opacity=".80"
+                      ShadowDepth="16" />
+            <DropShadowEffect x:Key="shadowButton"
+                      Color="GhostWhite"
+                      Opacity=".80"
+                      ShadowDepth="6" />
+
+
+
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Colors.xaml"/>
                 <ResourceDictionary Source="Buttons.xaml"/>
