--- a/ToolBox/ToolBox/ToolboxMain.xaml
+++ b/ToolBox/ToolBox/ToolboxMain.xaml
@@ -5,8 +5,52 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ToolBox"
         mc:Ignorable="d"
-        Title="ToolboxMain" Height="300" Width="300">
-    <Grid>
-        
+        WindowStartupLocation="CenterScreen"
+        Title="ToolboxMain" Height="320" Width="540">
+    <Grid d:LayoutOverrides="LeftMargin, RightMargin">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="120*"/>
+            <RowDefinition Height="120*"/>
+            <RowDefinition Height="80*"/>
+        </Grid.RowDefinitions>
+        <Grid.Background>
+            <SolidColorBrush Color="{DynamicResource BackGround}"/>
+        </Grid.Background>
+        <Button x:Name="ScoreBoard" Content="ScoreBoard" Margin="10" FontWeight="Bold" BorderThickness="5" Style="{DynamicResource ToolboxMainButtonTemplate}" Click="ScoreBoard_Click">
+            <Button.Background>
+                <SolidColorBrush Color="{DynamicResource QLBlue}"/>
+            </Button.Background>
+        </Button>
+        <Button x:Name="MyGuy" Content="My Guy" Margin="10" FontWeight="Bold" BorderThickness="5" Grid.Column="1" Style="{DynamicResource ToolboxMainButtonTemplate}">
+            <Button.Background>
+                <SolidColorBrush Color="{DynamicResource QLGreen}"/>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Break_Timer" Content="Break Timer" Margin="10" FontWeight="Bold" BorderThickness="5" Grid.Column="2" Style="{DynamicResource ToolboxMainButtonTemplate}">
+            <Button.Background>
+                <SolidColorBrush Color="{DynamicResource QLNavy}"/>
+            </Button.Background>
+        </Button>
+        <Button x:Name="button_Copy2" Content="Button" Margin="10" FontWeight="Bold" BorderThickness="5" Grid.Row="1" Style="{DynamicResource ToolboxMainButtonTemplate}">
+            <Button.Background>
+                <SolidColorBrush Color="{DynamicResource QLOrange}"/>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Options" Content="Options" Margin="10" FontWeight="Bold" BorderThickness="5" Grid.Column="1" Grid.Row="1" Style="{DynamicResource ToolboxMainButtonTemplate}">
+            <Button.Background>
+                <SolidColorBrush Color="{DynamicResource QLPurple}"/>
+            </Button.Background>
+        </Button>
+        <Button x:Name="Exit" Content="Exit" Margin="10" FontWeight="Bold" BorderThickness="5" Grid.Column="2" Grid.Row="1" Style="{DynamicResource ToolboxMainButtonTemplate}">
+            <Button.Background>
+                <SolidColorBrush Color="{DynamicResource QLRed}"/>
+            </Button.Background>
+        </Button>
+
     </Grid>
 </Window>
