--- a/ToolBox/ToolBox/ScoreBoardBigViewWindow.xaml
+++ b/ToolBox/ToolBox/ScoreBoardBigViewWindow.xaml
@@ -4,13 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ToolBox"
-        xmlns:converter="clr-namespace:ToolBox.TextToColorConverter;assembly=ToolBox"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Title="ScoreBoardBigViewWindow" Height="320" Width="540">
-    <Window.Resources>
-        <local:TextToColorConverter x:Key="TextToColorConverter"/>
-    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="47*"/>
@@ -25,10 +21,8 @@
             <SolidColorBrush Color="{DynamicResource BackGround}"/>
         </Grid.Background>
         <Button x:Name="button" 
-                Content="{Binding Path=Name}" 
-                CommandParameter="{Binding Path=Name}"
-                Tag="{Binding Path=Name}"
-                Background="{Binding Mode=OneWay, Source={StaticResource TextToColorConverter}}" 
+                Content="{Binding Path=Name}"
+                Background="{Binding BackColor}"
                 Grid.Column="1" 
                 Margin="10" 
                 Style="{DynamicResource BigViewIndicator}"/>
